phone no. modification

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <span>Kosher Certified</span>
             </p>-->
             <p>
-            	<div id="moto">"Work hard but not with an empty stomach."</div></p>
+            	<div id="moto">"Work hard but not on an empty stomach."</div></p>
           </div>
 
           <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -56,7 +56,7 @@
                 <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
             </li>-->
             <li id="phone" class="hidden-xs">
-              <a href="tel:410-602-5008">
+              <a href="tel:986-300-5210">
                 <span class="glyphicon glyphicon-earphone"></span><br class="hidden-xs">986-300-5210</a></li><br>
                 <li id="dilever" class="hidden-xs">
                 	<a href="#servdetial">
@@ -70,7 +70,7 @@
   </header>
 
   <div id="call-btn" class="visible-xs">
-    <a class="btn" href="tel:700-590-7779">
+    <a class="btn" href="tel:986-300-5210">
     <span class="glyphicon glyphicon-earphone"></span>
     986-300-5210
     </a>
