--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a href="index.html" class="pull-left visible-md visible-lg">
+          <a href="index.html" class="pull-left visible-md visible-lg visible-xs">
             <div id="logo-img"></div>
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>L.Langbang Bistro</h1></a>
+            <a href="index.html" class="pull-left visible-md visible-lg visible-sm"><h1>L.Langbang Bistro</h1></a>
            <!-- <p>
               <img src="images/star-k-logo.png" alt="Kosher certification">
               <span>Kosher Certified</span>
             </p>-->
             <p>
-            	<div id="moto">"Work hard but not on an empty stomach."</div></p>
+            	<div id="moto" class="pull-left visible-md visible-lg visible-sm">"Work hard but not on an empty stomach."</div></p>
           </div>
 
           <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
