small changes on the info

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
+          <div class="bgimg"></div>
           <a href="index.html" class="pull-left visible-md visible-lg visible-xs">
             <div id="logo-img"></div>
           </a>
@@ -39,10 +40,10 @@
 
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
-           	<li id="box">
+           	<!-- <li id="box">
               <a href="index.html">
                 <span class="glyphicon glyphicon-home"></span><br class="hidden-xs"> Home</a>
-            </li>
+            </li> -->
             <li id="box">
               <a href="menu-categories.html">
                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
@@ -124,7 +125,7 @@
       	</section>
       	<section id="servdetial">
           <span>Info:</span><br>
-          * Delivery area within 3-4 miles, with minimum order of &#8377;100 plus &#8377;20 charge for all deliveries.<br>
+          * Weekend delivery only. Area within 3-4 kilometer, with minimum order of &#8377;100 plus &#8377;20 charge for all deliveries.<br>
           <hr class="visible-xs">
         </section>
         <!--<section id="testimonials" class="col-sm-4">
