--- a/menu-categories.html
+++ b/menu-categories.html
@@ -15,18 +15,18 @@
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a href="index.html" class="pull-left visible-md visible-lg">
+          <a href="index.html" class="pull-left visible-md visible-lg visible-xs">
             <div id="logo-img"></div>
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>L.Langbang Bistro</h1></a>
+            <a href="index.html" class="pull-left visible-md visible-lg visible-sm"><h1>L.Langbang Bistro</h1></a>
            <!-- <p>
               <img src="images/star-k-logo.png" alt="Kosher certification">
               <span>Kosher Certified</span>
             </p>-->
             <p>
-              <div id="moto">"Work hard but not on an empty stomach"</div></p>
+              <div id="moto" class="pull-left visible-md visible-lg visible-sm">"Work hard but not on an empty stomach"</div></p>
           </div>
 
           <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -43,11 +43,11 @@
               <a href="index.html">
                 <span class="glyphicon glyphicon-home"></span><br class="hidden-xs"> Home</a>
             </li>
-            <li id="box" class="hidden-xs" >
+            <!-- <li id="box" class="hidden-xs" >
               <a href="menu-categories.html">
                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
-            </li>
-            <li id="box" class="hidden-xs">
+            </li> -->
+            <li id="box">
               <a href="#footer">
                 <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
             </li>
@@ -181,7 +181,7 @@
       	</section>
       	<section id="servdetial">
           <span>Info:</span><br>
-          * Delivery area within 3-4 miles, with minimum order of 100 INR plus 20 INR charge for all deliveries.<br>
+          * Weekend delivery only. Area within 3-4 kilometer, with minimum order of &#8377;100 plus &#8377;20 charge for all deliveries.<br>
           <hr class="visible-xs">
         </section>
         <!--<section id="testimonials" class="col-sm-4">
