added the about page

--- a/menu-categories.html
+++ b/menu-categories.html
@@ -48,7 +48,7 @@
                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
             </li> -->
             <li id="box">
-              <a href="#footer">
+              <a href="about.html">
                 <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
             </li>
             <!--<li id="box" class="hidden-xs">
@@ -89,78 +89,84 @@
 
     <section class="row">
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <a href="single-category.html">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Lunch</span>
+            <span>Milk tea</span>
           </div>
-        </a>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <a href="single-category.html">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Lunch</span>
+            <span>Cake</span>
           </div>
-        </a>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <a href="single-category.html">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Lunch</span>
+            <span>Donut</span>
           </div>
-        </a>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <a href="single-category.html">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Lunch</span>
+            <span>Pop jhur</span>
           </div>
-        </a>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <a href="single-category.html">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Lunch</span>
+            <span>Purtha</span>
           </div>
-        </a>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <a href="single-category.html">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Lunch</span>
+            <span>Pakowre</span>
           </div>
-        </a>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <a href="single-category.html">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Lunch</span>
+            <span>Nemke</span>
           </div>
-        </a>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <a href="single-category.html">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Lunch</span>
+            <span>Momo</span>
           </div>
-        </a>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <a href="single-category.html">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Lunch</span>
+            <span>Soup momo</span>
           </div>
-        </a>
       </div>
-    </section>
+      <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <div class="category-tile">
+            <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+            <span>Chicken chaw</span>
+          </div>
+      </div>
+      <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <div class="category-tile">
+            <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+            <span>Pork chaw</span>
+          </div>
+      </div>
+      <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <div class="category-tile">
+            <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+            <span>Chicken soup chaw</span>
+          </div>
+      </div>
+      <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <div class="category-tile">
+            <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+            <span>Pork soup chaw</span>
+          </div>
+      </div>
+      </section>
 
   </div><!-- End of #main-content -->
 
