--- a/about.html
+++ b/about.html
@@ -48,10 +48,10 @@
               <a href="menu-categories.html">
                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
             </li>
-            <li id="box">
+            <!-- <li id="box">
               <a href="about.html">
                 <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
-            </li>
+            </li> -->
             <!--<li id="box" class="hidden-xs">
               <a href="#">
                 <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
@@ -82,31 +82,14 @@
   </a>
   </div>
 
-
-
-  <div id="main-content" class="container">
-    <div class="jumbotron">
-      <img src="images/jumbotron_768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
+   <div id="about-box">
+  <h2 id="aboutheader">About This Website</h2>
+      <div id="about"><p>It may be hard to tell, but this website does much more than just help you choose a delicious dish from this cozy little restaurant. My name is Ritremiki&nbsp;T&nbsp;Langbang and This is my first website.</p>
+      <p>Mrs&nbsp;Lutmonki&nbsp;Langbang is the owner of this restaurant and I am her son. This restaurant has support our family for many years, and also you who have decided to eat in our resturant you have support us too. Therefore, thankyou for choosing our resturant. </p>
+      <p>We did not hire a chef,so, my Mom or my brother Sambor Langbang cook the food.</p>
+      
     </div>
-
-    <div id="home-tiles" class="row">
-      <div class="col-md-6 col-sm-6 col-xs-12">
-        <a href="menu-categories.html"><div id="menu-tile"><span>menu</span></div></a>
-      </div>
-      <!--<div class="col-md-4 col-sm-6 col-xs-12">
-        <a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
-      </div>-->
-      <div class="col-md-6 col-sm-6 col-xs-12">
-        <a href="https://goo.gl/maps/NJChgNuBfyyqS7uT8" target="_blank">
-          <div id="map-tile">
-          	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3601.745974519477!2d92.35362931449018!3d25.480156426416283!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3750052fcbda7255%3A0xc67d109268aaf64d!2sL%20Langbang%20Food!5e0!3m2!1sen!2sin!4v1592208981000!5m2!1sen!2sin" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-           <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.675372390488!2d-76.71386218529199!3d39.3635874269356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c81a14e7817803%3A0xab20a0e99daa17ea!2sDavid+Chu&#39;s+China+Bistro!5e0!3m2!1sen!2sus!4v1452824864156" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>-->
-            <span>map</span>
-          </div>
-        </a>
-      </div>
-    </div><!-- End of #home-tiles -->
-  </div><!-- End of #main-content -->
+  </div>
 
   <footer id="footer" class="panel-footer">
     <div class="container">
