--- a/about.html
+++ b/about.html
@@ -40,10 +40,10 @@
 
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
-           	<!-- <li id="box">
+           	<li id="box">
               <a href="index.html">
                 <span class="glyphicon glyphicon-home"></span><br class="hidden-xs"> Home</a>
-            </li> -->
+            </li>
             <li id="box">
               <a href="menu-categories.html">
                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
