--- a/about.html
+++ b/about.html
@@ -87,6 +87,7 @@
       <div id="about"><p>It may be hard to tell, but this website does much more than just help you choose a delicious dish from this cozy little restaurant. My name is Ritremiki&nbsp;T&nbsp;Langbang and This is my first website.</p>
       <p>Mrs&nbsp;Lutmonki&nbsp;Langbang is the owner of this restaurant and I am her son. This restaurant has support our family for many years, and also you who have decided to eat in our resturant you have support us too. Therefore, thankyou for choosing our resturant. </p>
       <p>We did not hire a chef,so, my Mom or my brother Sambor Langbang cook the food.</p>
+      <p>Please rate our resturant and leaves a review on google map it will help us alot and other too.</p>
       
     </div>
   </div>
