small changes on the menu page

--- a/menu-categories.html
+++ b/menu-categories.html
@@ -26,7 +26,7 @@
               <span>Kosher Certified</span>
             </p>-->
             <p>
-              <div id="moto" class="pull-left visible-md visible-lg visible-sm">"Work hard but not on an empty stomach"</div></p>
+              <div id="moto" class="pull-left visible-md visible-lg visible-sm">"Work hard but not on an empty stomach."</div></p>
           </div>
 
           <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -91,79 +91,85 @@
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Milk tea</span>
+            <span>Milk tea (&#8377;10)</span>
           </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Cake</span>
+            <span>Cake (&#8377;10)</span>
           </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Donut</span>
+            <span>Donut (&#8377;5)</span>
           </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Pop jhur</span>
+            <span>Pop jhur (&#8377;10)</span>
           </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Purtha</span>
+            <span>Purtha (&#8377;10)</span>
           </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Pakowre</span>
+            <span>Pakowre (&#8377;5)</span>
           </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Nemke</span>
+            <span>Nemke (&#8377;5)</span>
           </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Momo</span>
+            <span>Momo (&#8377;5/&#8377;10)</span>
           </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Soup momo</span>
+            <span>Soup momo (&#8377;80)</span>
           </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Chicken chaw</span>
+            <span>Chicken chaw (&#8377;80)</span>
           </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Pork chaw</span>
+            <span>Pork chaw (&#8377;80)</span>
           </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Chicken soup chaw</span>
+            <span>Chicken soup chaw (&#8377;80)</span>
           </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Pork soup chaw</span>
+            <span>Pork soup chaw (&#8377;80)</span>
+          </div>
+      </div>
+      <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <div class="category-tile">
+            <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+            <span>Chicken roll (&#8377;40)</span>
           </div>
       </div>
       </section>
