make the order page

--- a/Place-order.html
+++ b/Place-order.html
@@ -27,7 +27,7 @@
               <span>Kosher Certified</span>
             </p>-->
             <p>
-            	<div id="moto" class="pull-left visible-md visible-lg visible-sm">"Work hard but not on an empty stomach."</div></p>
+              <div id="moto" class="pull-left visible-md visible-lg visible-sm">"Work hard but not on an empty stomach."</div></p>
           </div>
 
           <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -40,7 +40,7 @@
 
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
-           	<li id="box">
+            <li id="box">
               <a href="index.html">
                 <span class="glyphicon glyphicon-home"></span><br class="hidden-xs"> Home</a>
             </li>
@@ -48,10 +48,10 @@
               <a href="menu-categories.html">
                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
             </li>
-            <!-- <li id="box">
+            <li id="box">
               <a href="about.html">
                 <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
-            </li> -->
+            </li>
             <!--<li id="box" class="hidden-xs">
               <a href="#">
                 <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
@@ -60,8 +60,8 @@
               <a href="tel:986-300-5210">
                 <span class="glyphicon glyphicon-earphone"></span><br class="hidden-xs">986-300-5210</a></li><br>
                 <li id="dilever" class="hidden-xs">
-                	<a href="#servdetial">
-                		<div>* Available: <br>&bullet;Dine-in <br>&bullet;Delivery <br>&bullet;Takeaway</div></a>
+                  <a href="#servdetial">
+                    <div>* Available: <br>&bullet;Dine-in <br>&bullet;Delivery <br>&bullet;Takeaway</div></a>
                 </li>
             </li>
           </ul><!-- #nav-list -->
@@ -82,15 +82,10 @@
   </a>
   </div>
 
-   <div id="about-box">
-  <h2 id="aboutheader">About This Website</h2>
-      <div id="about"><p>It may be hard to tell, but this website does much more than just help you choose a delicious dish from this cozy little restaurant. My name is Ritremiki&nbsp;T&nbsp;Langbang and This is my first website.</p>
-      <p>Mrs&nbsp;Lutmonki&nbsp;Langbang is the owner of this restaurant and I am her son. This restaurant has support our family for many years, and also you who have decided to eat in our resturant you have support us too. Therefore, thankyou for choosing our resturant. </p>
-      <p>We did not hire a chef,so, my Mom or my brother Sambor Langbang cook the food.</p>
-      <p>Please rate our resturant and leaves a review on google map it will help us alot and other too.</p>
-      
-    </div>
-  </div>
+        <div class="cognito">
+<script src="https://www.cognitoforms.com/s/nYjhg3PgmESUqBNd5t7GFg"></script>
+<script>Cognito.load("forms", { id: "2" });</script>
+</div>
 
   <footer id="footer" class="panel-footer">
     <div class="container">
@@ -106,8 +101,8 @@
           Shangpung, Moosyiem<br>
           West Jaintia Hills, Meghalaya<br>
           <hr class="visible-xs">
-      	</section>
-      	<section id="servdetial">
+        </section>
+        <section id="servdetial">
           <span>Info:</span><br>
           * Delivery is avialable during weekend and holiday only. Area within 3-4 kilometer, with minimum order of &#8377;100 plus &#8377;20 charge for all deliveries.<br>
           <hr class="visible-xs">
