--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       	</section>
       	<section id="servdetial">
           <span>Info:</span><br>
-          * Weekend delivery only. Area within 3-4 kilometer, with minimum order of &#8377;100 plus &#8377;20 charge for all deliveries.<br>
+          * Delivery is avialable during weekend and holiday only. Area within 3-4 kilometer, with minimum order of &#8377;100 plus &#8377;20 charge for all deliveries.<br>
           <hr class="visible-xs">
         </section>
         <!--<section id="testimonials" class="col-sm-4">
