--- a/menu-categories.html
+++ b/menu-categories.html
@@ -89,88 +89,158 @@
 
     <section class="row">
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <div class="category-tile">
+        <div class="dropdown">
+          <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Milk tea (&#8377;10)</span>
+            <span>Milk Tea (&#8377;10)</span>
+          </button>
+          <div class="dropdown-content">
+            <a href="Place-order.html" ><b>Order</b></a>
           </div>
+        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <div class="category-tile">
+        <div class="dropdown">
+          <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>Cake (&#8377;10)</span>
+          </button>
+          <div class="dropdown-content">
+            <a href="Place-order.html" ><b>Order</b></a>
           </div>
+        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <div class="category-tile">
+        <div class="dropdown">
+          <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Donut (&#8377;5)</span>
+            <span>donut (&#8377;10)</span>
+          </button>
+          <div class="dropdown-content">
+            <a href="Place-order.html" ><b>Order</b></a>
           </div>
+        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <div class="category-tile">
+        <div class="dropdown">
+          <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Pop jhur (&#8377;10)</span>
+            <span>pop jhur(&#8377;10)</span>
+          </button>
+          <div class="dropdown-content">
+            <a href="Place-order.html" ><b>Order</b></a>
           </div>
+        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <div class="category-tile">
+        <div class="dropdown">
+          <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Purtha (&#8377;10)</span>
+            <span>paratha(&#8377;10)</span>
+          </button>
+          <div class="dropdown-content">
+            <a href="Place-order.html" ><b>Order</b></a>
           </div>
+        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <div class="category-tile">
+        <div class="dropdown">
+          <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Pakowre (&#8377;5)</span>
+            <span>pakowre(&#8377;10)</span>
+          </button>
+          <div class="dropdown-content">
+            <a href="Place-order.html" ><b>Order</b></a>
           </div>
+        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <div class="category-tile">
+        <div class="dropdown">
+          <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Nemke (&#8377;5)</span>
+            <span>nemke(&#8377;10)</span>
+          </button>
+          <div class="dropdown-content">
+            <a href="Place-order.html" ><b>Order</b></a>
           </div>
+        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <div class="category-tile">
+        <div class="dropdown">
+          <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Momo (&#8377;5/&#8377;10)</span>
+            <span>momo(&#8377;10)</span>
+          </button>
+          <div class="dropdown-content">
+            <a href="Place-order.html" ><b>Order</b></a>
           </div>
+        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <div class="category-tile">
+        <div class="dropdown">
+          <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Soup momo (&#8377;80)</span>
+            <span>soup momo(&#8377;10)</span>
+          </button>
+          <div class="dropdown-content">
+            <a href="Place-order.html" ><b>Order</b></a>
           </div>
+        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <div class="category-tile">
+        <div class="dropdown">
+          <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Chicken chaw (&#8377;80)</span>
+            <span>cicken chaw(&#8377;10)</span>
+          </button>
+          <div class="dropdown-content">
+            <a href="Place-order.html" ><b>Order</b></a>
           </div>
+        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <div class="category-tile">
+        <div class="dropdown">
+          <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Pork chaw (&#8377;80)</span>
+            <span>pork chaw(&#8377;10)</span>
+          </button>
+          <div class="dropdown-content">
+            <a href="Place-order.html" ><b>Order</b></a>
           </div>
+        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <div class="category-tile">
+        <div class="dropdown">
+          <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Chicken soup chaw (&#8377;80)</span>
+            <span>chicken soup chaw(&#8377;10)</span>
+          </button>
+          <div class="dropdown-content">
+            <a href="Place-order.html" ><b>Order</b></a>
           </div>
+        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <div class="category-tile">
+        <div class="dropdown">
+          <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Pork soup chaw (&#8377;80)</span>
+            <span>pork soup chaw(&#8377;10)</span>
+          </button>
+          <div class="dropdown-content">
+            <a href="Place-order.html" ><b>Order</b></a>
           </div>
+        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <div class="category-tile">
+        <div class="dropdown">
+          <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Chicken roll (&#8377;40)</span>
+            <span>chicken roll(&#8377;10)</span>
+          </button>
+          <div class="dropdown-content">
+            <a href="Place-order.html" ><b>Order</b></a>
           </div>
+        </div>
       </div>
       </section>
 
@@ -193,7 +263,7 @@
       	</section>
       	<section id="servdetial">
           <span>Info:</span><br>
-          * Weekend delivery only. Area within 3-4 kilometer, with minimum order of &#8377;100 plus &#8377;20 charge for all deliveries.<br>
+          * Delivery is avialable during weekend and holiday only. Area within 3-4 kilometer, with minimum order of &#8377;100 plus &#8377;20 charge for all deliveries.<br>
           <hr class="visible-xs">
         </section>
         <!--<section id="testimonials" class="col-sm-4">
