add an order page to each item menu

--- a/menu-categories.html
+++ b/menu-categories.html
@@ -95,7 +95,7 @@
             <span>Milk Tea (&#8377;10)</span>
           </button>
           <div class="dropdown-content">
-            <a href="Place-order.html" ><b>Order</b></a>
+            <a href="milkorder.html" ><b>Order</b></a>
           </div>
         </div>
       </div>
@@ -106,7 +106,7 @@
             <span>Cake (&#8377;10)</span>
           </button>
           <div class="dropdown-content">
-            <a href="Place-order.html" ><b>Order</b></a>
+            <a href="cakeorder.html" ><b>Order</b></a>
           </div>
         </div>
       </div>
@@ -117,7 +117,7 @@
             <span>donut (&#8377;10)</span>
           </button>
           <div class="dropdown-content">
-            <a href="Place-order.html" ><b>Order</b></a>
+            <a href="donutorder.html" ><b>Order</b></a>
           </div>
         </div>
       </div>
@@ -128,7 +128,7 @@
             <span>pop jhur(&#8377;10)</span>
           </button>
           <div class="dropdown-content">
-            <a href="Place-order.html" ><b>Order</b></a>
+            <a href="popjhurorder.html" ><b>Order</b></a>
           </div>
         </div>
       </div>
@@ -139,7 +139,7 @@
             <span>paratha(&#8377;10)</span>
           </button>
           <div class="dropdown-content">
-            <a href="Place-order.html" ><b>Order</b></a>
+            <a href="parathaorder.html" ><b>Order</b></a>
           </div>
         </div>
       </div>
@@ -147,10 +147,10 @@
         <div class="dropdown">
           <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>pakowre(&#8377;10)</span>
+            <span>pakowre(&#8377;5)</span>
           </button>
           <div class="dropdown-content">
-            <a href="Place-order.html" ><b>Order</b></a>
+            <a href="pakowreorder.html" ><b>Order</b></a>
           </div>
         </div>
       </div>
@@ -158,10 +158,10 @@
         <div class="dropdown">
           <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>nemke(&#8377;10)</span>
+            <span>nemke(&#8377;5)</span>
           </button>
           <div class="dropdown-content">
-            <a href="Place-order.html" ><b>Order</b></a>
+            <a href="nemkeorder.html" ><b>Order</b></a>
           </div>
         </div>
       </div>
@@ -169,10 +169,10 @@
         <div class="dropdown">
           <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>momo(&#8377;10)</span>
+            <span>momo(&#8377;10/5)</span>
           </button>
           <div class="dropdown-content">
-            <a href="Place-order.html" ><b>Order</b></a>
+            <a href="momoorder.html" ><b>Order</b></a>
           </div>
         </div>
       </div>
@@ -180,10 +180,10 @@
         <div class="dropdown">
           <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>soup momo(&#8377;10)</span>
+            <span>soup momo(&#8377;80)</span>
           </button>
           <div class="dropdown-content">
-            <a href="Place-order.html" ><b>Order</b></a>
+            <a href="soupmomoorder.html" ><b>Order</b></a>
           </div>
         </div>
       </div>
@@ -191,10 +191,10 @@
         <div class="dropdown">
           <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>cicken chaw(&#8377;10)</span>
+            <span>chicken chaw(&#8377;90)</span>
           </button>
           <div class="dropdown-content">
-            <a href="Place-order.html" ><b>Order</b></a>
+            <a href="chickenchaworder.html" ><b>Order</b></a>
           </div>
         </div>
       </div>
@@ -202,10 +202,10 @@
         <div class="dropdown">
           <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>pork chaw(&#8377;10)</span>
+            <span>pork chaw(&#8377;80)</span>
           </button>
           <div class="dropdown-content">
-            <a href="Place-order.html" ><b>Order</b></a>
+            <a href="porkchaworder.html" ><b>Order</b></a>
           </div>
         </div>
       </div>
@@ -213,10 +213,10 @@
         <div class="dropdown">
           <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>chicken soup chaw(&#8377;10)</span>
+            <span>chicken soup chaw(&#8377;90)</span>
           </button>
           <div class="dropdown-content">
-            <a href="Place-order.html" ><b>Order</b></a>
+            <a href="chickensoupchaworder.html" ><b>Order</b></a>
           </div>
         </div>
       </div>
@@ -224,10 +224,10 @@
         <div class="dropdown">
           <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>pork soup chaw(&#8377;10)</span>
+            <span>pork soup chaw(&#8377;80)</span>
           </button>
           <div class="dropdown-content">
-            <a href="Place-order.html" ><b>Order</b></a>
+            <a href="porksoupchaworder.html" ><b>Order</b></a>
           </div>
         </div>
       </div>
@@ -235,10 +235,10 @@
         <div class="dropdown">
           <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>chicken roll(&#8377;10)</span>
+            <span>chicken roll(&#8377;40)</span>
           </button>
           <div class="dropdown-content">
-            <a href="Place-order.html" ><b>Order</b></a>
+            <a href="chickenrollorder.html" ><b>Order</b></a>
           </div>
         </div>
       </div>
@@ -263,7 +263,7 @@
       	</section>
       	<section id="servdetial">
           <span>Info:</span><br>
-          * Delivery is avialable during weekend and holiday only. Area within 3-4 kilometer, with minimum order of &#8377;100 plus &#8377;20 charge for all deliveries.<br>
+          * Delivery is avialable during weekend and holiday only. Area within 3-4 kilometer, with minimum order of &#8377;80 plus &#8377;20 charge for all deliveries.<br>
           <hr class="visible-xs">
         </section>
         <!--<section id="testimonials" class="col-sm-4">
