disable order of milk tea and soup

--- a/menu-categories.html
+++ b/menu-categories.html
@@ -94,9 +94,9 @@
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>Milk Tea (&#8377;10)</span>
           </button>
-          <div class="dropdown-content">
+          <!-- <div class="dropdown-content">
             <a href="milkorder.html" ><b>Order</b></a>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
@@ -182,9 +182,9 @@
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>soup momo(&#8377;80)</span>
           </button>
-          <div class="dropdown-content">
+          <!-- <div class="dropdown-content">
             <a href="soupmomoorder.html" ><b>Order</b></a>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
@@ -215,9 +215,9 @@
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>chicken soup chaw(&#8377;90)</span>
           </button>
-          <div class="dropdown-content">
+          <!-- <div class="dropdown-content">
             <a href="chickensoupchaworder.html" ><b>Order</b></a>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
@@ -226,9 +226,9 @@
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>pork soup chaw(&#8377;80)</span>
           </button>
-          <div class="dropdown-content">
+         <!--  <div class="dropdown-content">
             <a href="porksoupchaworder.html" ><b>Order</b></a>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
