add 2 more items and change the form

--- a/about.html
+++ b/about.html
@@ -84,10 +84,12 @@
 
    <div id="about-box">
   <h2 id="aboutheader">About This Website</h2>
-      <div id="about"><p>It may be hard to tell, but this website does much more than just help you choose a delicious dish from this cozy little restaurant. My name is Ritremiki&nbsp;T&nbsp;Langbang and This is my first website.</p>
-      <p>Mrs&nbsp;Lutmonki&nbsp;Langbang is the owner of this restaurant and I am her son. This restaurant has support our family for many years, and also you who have decided to eat in our resturant you have support us too. Therefore, thankyou for choosing our resturant. </p>
-      <p>We did not hire a chef,so, my Mom or my brother Sambor Langbang cook the food.</p>
-      <p>Please rate our resturant and leaves a review on google map it will help us alot and other too.</p>
+      <div id="about"><p>Hi! welcome to our website. Through our website you can order food from our resturant. At the moment we cannot tell you the time for delivery since this is our first time doing delivery but we will try our best to  deliver your order as fast as possible.</p>
+      <p>We feel so glad that we can do this because of the pendemic. During this time we are taking a lot of risk opening our resturant yet we still open it because this is our only source of income but with the help of this website we hope that we can close our resturant and start serving our costumer by delivering the food to there home. Just like everyone we are also concern of our safety and yours as well. We hope that you are in good health. Stay healthy!</p>
+      <p>Mrs&nbsp;Lutmonki&nbsp;Langbang is the owner of the restaurant. Through the restaurant she has support her family for many years, and also you who have decided to eat at this resturant or order from this resturant, you have support her family too. Therefore, thankyou for choosing this resturant.</p>
+      <p>We did not hire a chef,so, Mrs&nbsp;Lutmonki&nbsp;Langbang and her son Sambor&nbsp;Langbang cook the food.</p>
+      <p>Please rate our resturant and leaves a review on google map it will help us alot and others who discover our resturant through the internet.</p>
+      <p>Thank you.</p>
       
     </div>
   </div>
