--- a/menu-categories.html
+++ b/menu-categories.html
@@ -125,7 +125,7 @@
         <div class="dropdown">
           <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>pop jhur(&#8377;10)</span>
+            <span>veg pop(&#8377;10)</span>
           </button>
           <div class="dropdown-content">
             <a href="popjhurorder.html" ><b>Order</b></a>
@@ -140,6 +140,17 @@
           </button>
           <div class="dropdown-content">
             <a href="parathaorder.html" ><b>Order</b></a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+        <div class="dropdown">
+          <button class="category-tile">
+            <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+            <span>allu paratha(&#8377;10)</span>
+          </button>
+          <div class="dropdown-content">
+            <a href="alluparathaorder.html" ><b>Order</b></a>
           </div>
         </div>
       </div>
@@ -180,7 +191,7 @@
         <div class="dropdown">
           <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>soup momo(&#8377;80)</span>
+            <span>soup momo(&#8377;40)</span>
           </button>
           <!-- <div class="dropdown-content">
             <a href="soupmomoorder.html" ><b>Order</b></a>
@@ -191,7 +202,7 @@
         <div class="dropdown">
           <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>chicken chaw(&#8377;90)</span>
+            <span>chicken chow(&#8377;90)</span>
           </button>
           <div class="dropdown-content">
             <a href="chickenchaworder.html" ><b>Order</b></a>
@@ -202,7 +213,7 @@
         <div class="dropdown">
           <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>pork chaw(&#8377;80)</span>
+            <span>pork chow(&#8377;80)</span>
           </button>
           <div class="dropdown-content">
             <a href="porkchaworder.html" ><b>Order</b></a>
@@ -213,7 +224,7 @@
         <div class="dropdown">
           <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>chicken soup chaw(&#8377;90)</span>
+            <span>chicken soup chow(&#8377;90)</span>
           </button>
           <!-- <div class="dropdown-content">
             <a href="chickensoupchaworder.html" ><b>Order</b></a>
@@ -224,7 +235,7 @@
         <div class="dropdown">
           <button class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>pork soup chaw(&#8377;80)</span>
+            <span>pork soup chow(&#8377;80)</span>
           </button>
          <!--  <div class="dropdown-content">
             <a href="porksoupchaworder.html" ><b>Order</b></a>
@@ -239,6 +250,17 @@
           </button>
           <div class="dropdown-content">
             <a href="chickenrollorder.html" ><b>Order</b></a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+        <div class="dropdown">
+          <button class="category-tile">
+            <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+            <span>egg roll(&#8377;20)</span>
+          </button>
+          <div class="dropdown-content">
+            <a href="eggrollorder.html" ><b>Order</b></a>
           </div>
         </div>
       </div>
